<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">X-Bionic</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_flash">X-Bionic</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="qqlogin">腾讯账号登录</string>
    <string name="snlogin">新浪账号登录</string>
    <string name="bllogin">部落用户登录</string>
    <string name="register">新用戶注册</string>
    <string name="help"><i><u>帮助</u></i></string>
    <string name="service"><i><u>服务条款</u></i></string>
    <string name="title_activity_qqlogin">QQloginActivity</string>
    <string name="qqsq">授  权</string>
    <string name="qqzx">注销</string>
    <string name="blpf">部落平方</string>
    <string name="title_activity_sina_login">SinaLoginActivity</string>
    <string name="xlrz">微博认证OAUTH2.0</string>
    <string name="xldl">单击登陆sso</string>
    <string name="xlzx">注销</string>
    <string name="xintroduction">X的介绍</string>
    <string name="title_activity_bl_login">BlLoginActivity</string>
    <string name="login">登录</string>
    <string name="shopingcar">我的购物车</string>
    <string name="drsq">达人申请</string>
    <string name="newuserregister">注册</string>
    <string name="bldsc">无限增值服务应用，欢迎您！</string>
    <string name="blenter">进入部落</string>
    <string name="username">请输入账号</string>
    <string name="password">请输入密码</string>
    <string name="forgetpsw"><i><u>忘记密码?</u></i></string>
    <string name="title_activity_new_user">NewUserActivity</string>
    <string name="snreg">新浪微博注册</string>
    <string name="qqreg">腾讯账号注册</string>
    <string name="mobreg">使用手机注册</string>
    <string name="title_activity_forget_psw">ForgetPswActivity</string>
    <string name="findpsw">找回密码</string>
    <string name="findbyemail">"使用Email找回"</string>
    <string name="findbymobile">"使用手机验证码找回"</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="phonenum">"请输入手机号"</string>
    <string name="getysm">"获取验证码"</string>
    <string name="enterbionic">"点击进入X-Bionic"</string>
    <string name="description">"使用SSO登录前，请检查手机上是否已经安装新浪微博客户端，目前仅3.0.0及以上微博客户端版本支持SSO；如果未安装，将自动转为Oauth2.0进行认证"</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="buy">产品购买</string>
    <string name="flss">分类与搜索</string>
    <string name="story">达人故事</string>
    <string name="activity">X 的活动</string>
    <string name="Xdescription">X 的介绍</string>
    <string name="title_activity_detai_product_list">ProductListActivity</string>
    <string name="title_activity_register_vipctivity">RegisterVipctivity</string>
    <string name="title_activity_activity">ActivityActivity</string>
    <string name="title_activity_product_detail">ProductDetailActivity</string>
    <string name="title_activity_buy_and_info">BuyAndInfoActivity</string>
    <string name="title_activity_award">AwardActivity</string>

</resources>