<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_eagle"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_buy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/popubackground"
                android:gravity="center"
                android:text="@string/buy"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/tv_story"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:background="@drawable/popubackground"
                android:gravity="center"
                android:text="@string/story"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_x_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/popubackground"
                android:gravity="center"
                android:text="@string/activity"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/tv_x_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:background="@drawable/popubackground"
                android:gravity="center"
                android:text="@string/Xdescription"
                android:textColor="#FFFFFF" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>