<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/allbackground"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:contentDescription="@null"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:scaleX="0.80" >

        <TextView
            android:id="@+id/tv_qq"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/loginstyle"
            android:gravity="center"
            android:text="@string/qqlogin"
            android:textColor="#F0F0F0"
            android:textScaleX="1.25"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_sina"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/loginstyle"
            android:gravity="center"
            android:text="@string/snlogin"
            android:textColor="#F0F0F0"
            android:textScaleX="1.25"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_bl"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/loginstyle"
            android:gravity="center"
            android:text="@string/bllogin"
            android:textColor="#F0F0F0"
            android:textScaleX="1.25"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="#262626" />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/loginstyle"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="#F0F0F0"
            android:textScaleX="1.25"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="#262626" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/ib_heipitem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/help"
            android:textColor="@drawable/loginhelp"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/ib_serviceitem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/service"
            android:textColor="@drawable/loginhelp"
            android:textSize="25sp" />
    </RelativeLayout>

</LinearLayout>