<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/allbackground"
    android:orientation="vertical"
    tools:context=".FindPswActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_back" >

        <ImageButton
            android:id="@+id/ib_fp_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/back"
            android:contentDescription="@null" 
            />
        
   

        <TextView
            android:id="@+id/tv_dlbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:paddingBottom="13dp"
            android:paddingTop="13dp"
            android:text="@string/findpsw"
            android:textColor="#FFFFFF"
            android:textSize="25sp" />
    </RelativeLayout>
    

    
    

    <TextView
        android:id="@+id/tv_findpsw_by_em"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/findpswbyem"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/findbyemail"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_findpsw_by_mb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/findpswbymb"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/findbymobile"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

</LinearLayout>