<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/allbackground"
    android:orientation="vertical"
    tools:context=".RegisterByPhoneActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/title_back" >

        <ImageButton
            android:id="@+id/ib_phonereg_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/back"
            android:contentDescription="@null"
            android:paddingBottom="15dp"
            android:paddingTop="15dp" />
         <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/newuserregister"
        android:textColor="#FFFFFF"
        android:textSize="25sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_weight="8"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/et_phone_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/telphone_text"
            android:hint="@string/phonenum"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingTop="5dp" />

        <TextView
            android:id="@+id/tv_getyzm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/loginstyle"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/getysm"
            android:textColor="#F0F0F0"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>